RESOLVED FIXED178473
Key events should not update Document.lastHandledUserGestureTimestamp unless key event is handled
https://bugs.webkit.org/show_bug.cgi?id=178473
Summary Key events should not update Document.lastHandledUserGestureTimestamp unless ...
Eric Carlson
Reported 2017-10-18 10:42:41 PDT
Extend the changes made in r223307 to not update Document.lastHandledUserGestureTimestamp unless the key event is handled by the page.
Attachments
Proposed patch. (4.47 KB, patch)
2017-10-18 11:00 PDT, Eric Carlson
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (12.93 MB, application/zip)
2017-10-18 12:20 PDT, Build Bot
no flags
Eric Carlson
Comment 1 2017-10-18 10:43:17 PDT
Eric Carlson
Comment 2 2017-10-18 11:00:17 PDT
Created attachment 324136 [details] Proposed patch.
Build Bot
Comment 3 2017-10-18 12:20:46 PDT
Comment on attachment 324136 [details] Proposed patch. Attachment 324136 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/4905433 New failing tests: webrtc/video-replace-muted-track.html
Build Bot
Comment 4 2017-10-18 12:20:48 PDT
Created attachment 324148 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
Eric Carlson
Comment 5 2017-10-18 12:46:13 PDT
(In reply to Build Bot from comment #4) > Created attachment 324148 [details] > Archive of layout-test-results from ews123 for ios-simulator-wk2 > > The attached test failures were seen while running run-webkit-tests on the > ios-sim-ews. > Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6 This seems unrelated. The test that failed is webrtc/video-replace-muted-track.html, which is flakey on the simulator (see bug 173608).
Brent Fulgham
Comment 6 2017-10-18 13:19:40 PDT
Comment on attachment 324136 [details] Proposed patch. Looks great! r=me.
WebKit Commit Bot
Comment 7 2017-10-18 13:26:42 PDT
Comment on attachment 324136 [details] Proposed patch. Clearing flags on attachment: 324136 Committed r223626: <https://trac.webkit.org/changeset/223626>
WebKit Commit Bot
Comment 8 2017-10-18 13:26:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2017-10-18 13:28:12 PDT
Darin Adler
Comment 10 2017-11-20 22:36:30 PST
Comment on attachment 324136 [details] Proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=324136&action=review > Source/WebCore/ChangeLog:13 > + (WebCore::EventHandler::keyEvent): Restore the current Document's "lastHandledUserGestureTimestamp" > + if the key event was not handled. Why not just wait to set it until afterward?
Note You need to log in before you can comment on or make changes to this bug.