Key events should not update Document.lastHandledUserGestureTimestamp unless key event is handled https://bugs.webkit.org/show_bug.cgi?id=178473 <rdar://problem/34869935>

Reviewed by Brent Fulgham.

Source/WebCore:

No new tests, updated media/restricted-audio-playback-with-document-gesture.html for this change.

* page/EventHandler.cpp:
(WebCore::EventHandler::keyEvent): Restore the current Document's "lastHandledUserGestureTimestamp"
if the key event was not handled.

LayoutTests:

* media/restricted-audio-playback-with-document-gesture.html: Pass true to runWithKeyDown so
it consumes the keydown event.
* media/video-test.js:
(runWithKeyDown): Take optional parameter which causes event handler to call preventDefault.


Canonical link: https://commits.webkit.org/194678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223626 268f45cc-cd09-0410-ab3c-d52691b4dbfc